--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "mongoose": "^6.2.2",
     "nodemon": "^2.0.15"
   }
 }
